[tool.poetry]
name = "media-processor"
version = "0.1.0"
description = "A Python package that provides utilities for processing media files."
authors = ["Victor Maznichenko <victor_maznichenko@mail.ru>"]

[tool.poetry.scripts]
post-install = "post_install.py:check_ffmpeg"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0.0"
pydub = "^0.25.1"
pillow = "^10.4.0"
pypdf2 = "^3.0.1"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"